k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sample-app-kub-namespace
spec:
  finalizers:
    - kubernetes
