k8s/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
  namespace: sample-app-kub-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      imagePullSecrets:
      - name: sample-app-secret-cr
      containers:
      - name: sample-app
        image: sampleappcrzrmod.azurecr.io/sample-app:latest
        imagePullPolicy: Always
        command: ["php"]
        args: ["artisan", "serve", "--host=0.0.0.0", "--port=8080"]
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      restartPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
