k8s/manifest-sample-app.yaml
- apiVersion: v1
  kind: Namespace
  metadata:
    name: sample-app-kub-namespace
  spec:
    finalizers:
      - kubernetes
---
- apiVersion: v1
  kind: Secret
  metadata:
    name: sample-app-secret
    namespace: sample-app-kub-namespace
  type: Opaque
  data:
    laravel-app-key: YmFzZTY0OmIwOGpuYlNSVTNjbXd0MGZZbmRRbzl4bDhDbXdaLy9jTzFLUGxoREhQdm89
    mysql-ssl-ca: L3Zhci9EaWdpQ2VydEdsb2JhbFJvb3RDQS5jcnQucGVt
    db-host: LW5kYnNlcnZlcmhwYnBpcnRlLm15c3FsLmRhdGFiYXNlLmF6dXJlLmNvbQo=
    db-connection: LW15c3FsCg==
    db-port: LSAzMzA2Cg==
    db-database: biBsYXJhdmVsCg==
    db-username: aHBicGlydGU=
    db-password: SFNfZVhKZlBvWDA0QWNyVktIcXNhM2N4eWswa0tO
---
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: sample-app-configmap
    namespace: sample-app-kub-namespace
  data:
    app_debug: "false"
    app_env: production
---
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: sample-app
    namespace: sample-app-kub-namespace
  spec:
    replicas: 2
    selector:
      matchLabels:
        app: sample-app
    template:
      metadata:
        labels:
          app: sample-app
      spec:
        nodeSelector:
          kubernetes.io/os: linux
        containers:
          - name: sample-app
            image: sampleappcrzrmod.azurecr.io/sample-app:latest
            ports:
              - containerPort: 8080
            resources:
              requests:
                cpu: "0.5"
                memory: 129M
              limits:
                cpu: "1.5"
                memory: 2048G
---
- apiVersion: v1
  kind: Service
  metadata:
    name: sample-app-service-interne
    namespace: sample-app-kub-namespace
  spec:
    selector:
      app: sample-app
    ports:
      - protocol: TCP
        name: port80
        port: 85
        targetPort: 8080
---
- apiVersion: v1
  kind: Service
  metadata:
    name: sample-app-service-externe
    namespace: sample-app-kub-namespace
  spec:
    type: LoadBalancer
    selector:
      app: sample-app
    ports:
      - name: port80
        protocol: TCP
        port: 80
        targetPort: 8080
