k8s/service_clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-service-clusterip
  namespace: sample-app-kub-namespace
spec:
  type: ClusterIP
  selector:
    app: sample-app
  ports:
  - port: 443
    targetPort: 8080
