k8s/service_interne.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sample-app-service-interne
  namespace: sample-app-kub-namespace
spec:
  selector:
    app: sample-app
  ports:
    - protocol: TCP
      name: port80
      port: 80
      targetPort: 8080
