k8s/service_lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-service-loadbalancer
  namespace: sample-app-kub-namespace
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-ipv4: 20.166.206.8
spec:
  type: LoadBalancer
  selector:
    app: sample-app
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
