k8s/test_local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-localhost
  namespace: sample-app-kub-namespace
  labels:
    app: sample-app
spec:
  ingressClassName: nginx
  rules:
  - host: terracloud.access.ly
    http:
      paths:
      - backend:
          service:
            name: sample-app-service-clusterip
            port:
              number: 80
        path: /
        pathType: Prefix
